# Necromancer

./: CMakeLists.txt  main.cpp  test.cpp  test1.cpp
lab0/: .gitignore  CMakeLists.txt
lab0/application/: CMakeLists.txt  startup.cpp
lab0/application/controller/: MatrixController.cpp  MatrixController.h
lab0/application/model/: Matrix.h  Vector.h
lab0/application/presentation/: Dialog.cpp  Dialog.h
lab0/builder/: Builder.cpp  Builder.h  CMakeLists.txt  IController.h  Request.h  Response.h  ResponseCode.h
lab3/tiled/: безымянный.tiled-session
lab4/: CMakeLists.txt  main.cpp  test.cpp  test1.cpp
lab4/resources/levels/maps/: 1.txt  2.txt  field1.tmx  field1.xml  field2.xml
lab4/resources/units/: human.xml  player_walking.xml
lab4/src/: config.h
lab4/src/activity/field/: FieldControllerDI.h
lab4/src/activity/level/: LevelController.h  LevelModel.h  LevelView.cpp  LevelView.h
lab4/src/data/: Repository.h
lab4/src/domain/entity/: FieldEntity.h  LevelEntity.h  PlayerEntity.h  UnitEntity.h
lab4/src/entities/: EntityModel.h  EntityView.h
lab4/src/entities/player/: PlayerModel.h  PlayerModelDI.h  PlayerView.h
lab4/src/game/: Game.h  RenderWindowDI.h
lab4/src/presentation/: Game.h  RenderWindowDI.h
lab4/src/presentation/controller/: FieldController.h  LevelController.h
lab4/src/presentation/model/: CurrentFieldModel.h  FieldModel.h  PlayerModel.h  UnitModel.h
lab4/src/presentation/model/bullet/: FireballSpell.h
lab4/src/presentation/model/unit/: CharacterFaction.h  HumanModel.h  PlayerModel.h  UnitModel.h
lab4/src/presentation/view/: CurrentFieldView.h  FieldView.h  LevelActivity.h  PlayerView.h  UnitView.h
lab4/src/presentation/view/level/: FieldView.h  ObjectView.h  UnitView.h
lab4/src/utils/: ActivityManager.h  ActivityManagerDI.h  DependencyInjection.h  Repository.h  Singleton.h  StaticDots.h
lab4/src/utils/activity/: Activity.h  ActivityManager.h  ActivityManagerDI.h
lab4/src/utils/animation/: Animation.hpp  AnimationManager.h
lab4/src/utils/level/: Layer.h  Level.cpp  Level.h  Object.cpp  Object.h
lab4/src/utils/mvc/: IController.h  IView.h
lab4/src/utils/observer/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
lab4/tiled/: 32x32_tiles.tsx  PathAndObjects.tsx  merged2.tsx  безымянный.tiled-session
resources/levels/maps/: field1.xml  field2.xml  field3.tmx  field3.xml  merged.tsx
resources/spells/: fireball.xml
resources/units/: golem.xml  human.xml  player.xml  player_walking.xml
src/: Game.h  RenderWindowDI.h  config.h
src/controller/: FieldController.h  LevelController.h
src/data/: Repository.h
src/model/: FieldModel.h
src/model/bullet/: BulletModel.h  FireballSpell.h
src/model/interactiveGameObject/: ManaPotion.h  (+2 more)
src/utils/: DependencyInjection.h  StaticDots.h
src/view/: ObjectView.h
(+42 files in other folders)
